fine-tuned concordance future

--- a/french/pages/exercise_concordance_future.html
+++ b/french/pages/exercise_concordance_future.html
@@ -185,14 +185,14 @@
                                 de l’argent de côté.
                             </li>
                             <li>
-                                J’irai me coucher dès que je
-                                (<b title="serai rentré">rentrer</b>)
-                                <input type="text" pattern="serai rentré">
+                                J’irai me coucher dès que
+                                (<b title="je serai rentré">je rentrer</b>)
+                                <input type="text" class="wide" pattern="je serai rentré">
                             </li>
                             <li>
                                 Il te racontera son voyage lorsque tu lui
                                 (<b title="auras raconté">raconter</b>)
-                                <input type="text" pattern="auras raconté">
+                                <input type="text" class="wide" pattern="auras raconté">
                                 le tien.
                             </li>
                         </ol>
@@ -240,9 +240,9 @@
                                 <input type="text" class="wide" pattern="l'aurez terminé">
                             </li>
                             <li>
-                                Lorsque j’aurai appris le résultat du concours, je
-                                (<b title="serai">être</b>)
-                                <input type="text" pattern="serai">
+                                Lorsque j’aurai appris le résultat du concours,
+                                (<b title="je serai">je être</b>)
+                                <input type="text" pattern="je serai">
                                 plus calme.
                             </li>
                             <li>
@@ -274,8 +274,8 @@
                         <ol>
                             <li>
                                 Elles
-                                (<b title="s'assoiront">s'asseoir</b>)
-                                <input type="text" pattern="s'assoiront">
+                                (<b title="s'assiéront">s'asseoir</b>)
+                                <input type="text" pattern="s'assiéront">
                                 à table après qu’elles se seront lavé les mains.
                             </li>
                             <li>
@@ -285,9 +285,9 @@
                                 les meubles de patio.
                             </li>
                             <li>
-                                Aujourd’hui, j’ai beaucoup à faire mais, demain, je
-                                (<b title="pourrai">pouvoir</b>)
-                                <input type="text" pattern="pourrai">
+                                Aujourd’hui, j’ai beaucoup à faire mais, demain,
+                                (<b title="je pourrai">je pouvoir</b>)
+                                <input type="text" pattern="je pourrai">
                                 t’aider.
                             </li>
                             <li>
@@ -332,9 +332,9 @@
                                 Bonjour, je suis absente présentement. Laissez-moi vos coordonnées et je vous
                                 (<b title="rappellerai">rappeler</b>)
                                 <input type="text" pattern="rappellerai">
-                                dès que je
-                                (<b title="serai revenu">revenir</b>)
-                                <input type="text" pattern="serai revenu">
+                                dès que
+                                (<b title="je serai revenu">je revenir</b>)
+                                <input type="text" class="wide" pattern="je serai revenu">
                                 à mon bureau. Merci.
                             </li>
                             <li>
@@ -355,21 +355,20 @@
                                 mon diplôme.
                             </li>
                             <li>
-                                Demain, je
-                                (<b title="retournerai">retourner</b>)
-                                <input type="text" pattern="retournerai">
-                                en classe mais, ce matin, je
-                                (<b title="reste">rester</b>)
-                                <input type="text" pattern="reste">
+                                Demain,
+                                (<b title="je retournerai">je retourner</b>)
+                                <input type="text" class="wide" pattern="je retournerai">
+                                en classe mais, ce matin,
+                                (<b title="je reste">je rester</b>)
+                                <input type="text" pattern="je reste">
                                 au lit, je suis malade.
                             </li>
                             <li>
-                                Je
-                                (<b title="laverai">laver</b>)
-                                <input type="text" pattern="laverai">
-                                mes cheveux pendant que je
-                                (<b title="prendrai">prendre</b>)
-                                <input type="text" pattern="prendrai">
+                                (<b title="Je laverai">Je laver</b>)
+                                <input type="text" pattern="[Jj]e laverai">
+                                mes cheveux pendant que
+                                (<b title="je prendrai">je prendre</b>)
+                                <input type="text" pattern="je prendrai">
                                 ma douche.
                             </li>
                         </ol>
