fine-tuned exercise ce-ces-cet

--- a/french/pages/exercise_ce_ces_cet.html
+++ b/french/pages/exercise_ce_ces_cet.html
@@ -191,7 +191,7 @@
                         <ol>
                             <li>
                                 <span title="Ces chiennes sont malades.">Cette chienne est malade.</span>
-                                <span><input type="text" pattern="Ces chiennes sont maladesù[.]?"></span>
+                                <span><input type="text" pattern="Ces chiennes sont malades[.]?"></span>
                             </li>
 
                             <li>
