fine-tuned concordance future (added exercise from ChatGPT)

--- a/french/pages/exercise_concordance_future.html
+++ b/french/pages/exercise_concordance_future.html
@@ -96,12 +96,6 @@
                             </li>
 
                             <li>
-                                <span><b title="se donnera - se sera donné">se donner</b> : elle</span>
-                                <span><input type="text" pattern="se donnera"></span>
-                                <span><input type="text" pattern="se sera donné"></span>
-                            </li>
-
-                            <li>
                                 <span><b title="parlerez - aurez parlé">parler</b> : vous</span>
                                 <span><input type="text" pattern="parlerez"></span>
                                 <span><input type="text" pattern="aurez parlé"></span>
@@ -161,12 +155,6 @@
                                 le signal.
                             </li>
                             <li>
-                                Quand vous n’aurez plus besoin de ce journal, vous le
-                                (<b title="mettrez">mettre</b>)
-                                <input type="text" pattern="mettrez">
-                                au recyclage.
-                            </li>
-                            <li>
                                 Elle sera très fatiguée après qu’elle
                                 (<b title="aura couru">courir</b>)
                                 <input type="text" pattern="aura couru">
@@ -194,6 +182,11 @@
                                 (<b title="auras raconté">raconter</b>)
                                 <input type="text" class="wide" pattern="auras raconté">
                                 le tien.
+                            </li>
+                            <li>
+                                Quand nous (<b title="aurons gagné">gagner</b>)
+                                <input type="text" class="wide" pattern="aurons gagné">
+                                assez d’argent, nous achèterons une maison.
                             </li>
                         </ol>
                     </section>
