added exercise for lui-leur

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -64,7 +64,7 @@
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th class="conjugations conjugations-plus others" colspan="10">A1</th>
-                        <th class="conjugations conjugations-plus others tense-sequence" colspan="13">A2</th>
+                        <th class="conjugations conjugations-plus others tense-sequence" colspan="14">A2</th>
                         <th class="conjugations tense-sequence" colspan="7">B1</th>
                         <th class="conjugations conjugations-plus tense-sequence" colspan="9">B2</th>
                     </tr>
@@ -90,6 +90,7 @@
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
                         <th class="others" colspan="1">Ceci Cela Celui</th>
+                        <th class="others" colspan="1">Lui Leur</th>
                         <th class="others" colspan="1" title="négation 1">nég.1</th>
                         <th class="others" colspan="1" title="négation 2">nég.2</th>
                         <th class="conjugations" colspan="2">impératif</th>
@@ -155,6 +156,7 @@
 
                         <th class="others"><a href="exercise_time_prepositions.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_ceci_cela_celui.html">texte</a><small>*</small></th>
+                        <th class="others"><a href="exercise_lui_leur.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_negation.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_negation2.html">texte</a><small>*</small></th>
 
@@ -238,6 +240,7 @@
 
                             <td class="others" data-key="exercise_time_prepositions.html"></td>
                             <td class="others" data-key="exercise_ceci_cela_celui.html"></td>
+                            <td class="others" data-key="exercise_lui_leur.html"></td>
                             <td class="others" data-key="exercise_negation.html"></td>
                             <td class="others" data-key="exercise_negation2.html"></td>
 
