--- a/french/index.html
+++ b/french/index.html
@@ -239,6 +239,13 @@
 
   <div class="card">
     <span class="cefr">A2</span>
+    <header>Lui, leur</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_lui_leur.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
     <header>La négation</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_negation.html">exercice de texte</a>
