fine-tuning concordance future

--- a/french/pages/exercise_concordance_future.html
+++ b/french/pages/exercise_concordance_future.html
@@ -144,8 +144,8 @@
                                 une sieste, tu seras plus en forme.
                             </li>
                             <li>
-                                Je (<b title="serai certainement arrivé">arriver certainement</b>)
-                                <input type="text" class="extra-wide" pattern="serai certainement arrivé">
+                                (<b title="Je serai certainement arrivé">Je arriver certainement</b>)
+                                <input type="text" style="width: 13em" pattern="[Jj]e serai certainement arrivé">
                                 lorsque tu partiras.
                             </li>
                             <li>
@@ -211,9 +211,8 @@
                                 à la campagne.
                             </li>
                             <li>
-                                Je
-                                (<b title="serai certainement parti">partir certainement</b>)
-                                <input type="text" class="extra-wide" pattern="serai certainement parti">
+                                (<b title="Je serai certainement parti">Je partir certainement</b>)
+                                <input type="text" style="width: 13em" pattern="[Jj]e serai certainement parti">
                                 lorsque tu arriveras.
                             </li>
                             <li>
@@ -253,7 +252,7 @@
                             <li>
                                 Tu diras bonjour à ces gens quand tu les
                                 (<b title="rencontreras">rencontrer</b>)
-                                <input type="text" pattern="rencontreras">
+                                <input type="text" class="wide" pattern="rencontreras">
                             </li>
                         </ol>
                     </section>
