fine-tuned mon-ton

--- a/french/pages/exercise_mon_ton_son.html
+++ b/french/pages/exercise_mon_ton_son.html
@@ -84,7 +84,7 @@
                     <section>
                         <h4> Complétez les phrases suivantes avec <i>son</i>, <i>sa</i> ou <i>ses</i>.</h4>
 
-                        <ol class="short-input">
+                        <ol>
                             <li>
                                 le chat de Sophie : <i>son chat</i>
                             </li>
@@ -101,7 +101,7 @@
 
                             <li>
                                 <span title="son dictionnaire">le dictionnaire de Paul</span> :
-                                <input type="text" pattern="son dictionnaire">
+                                <input type="text" class="wide" pattern="son dictionnaire">
                             </li>
 
                             <li>
@@ -134,7 +134,7 @@
                             Chère Angélique,
                         </p>
 
-                        <p>
+                        <p class="short-input">
                             Je suis fou d’amour de toi. J’aime
                             <input type="text" pattern="ton">
                             <b title="ton">joli visage</b>
@@ -153,7 +153,7 @@
                             Je vois
                             <input type="text" pattern="">
                             <b title="ta">belle silhouette</b> et
-                            <input type="text" pattern="tes">
+                            <input type="text" pattern="ta">
                             belles grandes jambes.
 
                             Tout me plaît chez toi,
@@ -176,7 +176,7 @@
                                 <input type="text" pattern="son">
                                 <b title="son">entrée</b> est en pierres.
 
-                                <input type="text" pattern="Sa">
+                                <input type="text" pattern="[Ss]a">
                                 <b title="Sa">piscine</b> est creusée et je peux utiliser
                                 <input type="text" pattern="ses">
                                 <b title="ses">balançoires</b>.
@@ -196,15 +196,15 @@
                                 Mon frère et moi avons de la chance.
                                 Nous pouvons compter sur <i>nos parents</i>.
 
-                                <input type="text" pattern="Notre">
+                                <input type="text" pattern="[Nn]otre">
                                 <b title="Notre">mère</b> est toujours présente et attentive à
                                 <input type="text" pattern="nos">
                                 <b title="nos">besoins</b>.
 
-                                <input type="text" pattern="Notre">
+                                <input type="text" pattern="[Nn]otre">
                                 <b title="Notre">père</b> s’occupe aussi de nous chaque fois qu’il le peut.
 
-                                <input type="text" pattern="Notre">
+                                <input type="text" pattern="[Nn]otre">
                                 <b title="Notre">famille</b> est très heureuse et même
                                 <input type="text" pattern="notre">
                                 <b title="notre">chien</b> est épanoui.
