added text exercise for Y En (incomplete)

--- a/french/index.html
+++ b/french/index.html
@@ -232,6 +232,13 @@
 
   <div class="card">
     <span class="cefr">A2</span>
+    <header>Y, en</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_y_en.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
     <header>Ceci, cela, celui</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_ceci_cela_celui.html">exercice de texte</a>
