--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -64,7 +64,7 @@
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th class="conjugations conjugations-plus others" colspan="10">A1</th>
-                        <th class="conjugations conjugations-plus others tense-sequence" colspan="14">A2</th>
+                        <th class="conjugations conjugations-plus others tense-sequence" colspan="15">A2</th>
                         <th class="conjugations tense-sequence" colspan="7">B1</th>
                         <th class="conjugations conjugations-plus tense-sequence" colspan="9">B2</th>
                     </tr>
@@ -89,6 +89,7 @@
                         </th>
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
+                        <th class="others" colspan="1">Y En</th>
                         <th class="others" colspan="1">Ceci Cela Celui</th>
                         <th class="others" colspan="1">Lui Leur</th>
                         <th class="others" colspan="1" title="négation 1">nég.1</th>
@@ -155,6 +156,7 @@
                         <th class="conjugations"><a href="exercise_future.html">texte</a><small>*</small></th>
 
                         <th class="others"><a href="exercise_time_prepositions.html">texte</a><small>*</small></th>
+                        <th class="others"><a href="exercise_y_en.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_ceci_cela_celui.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_lui_leur.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_negation.html">texte</a><small>*</small></th>
@@ -185,10 +187,8 @@
 
                         <!-- B2 -->
                         <!-- subjonctif passé -->
-                        <th class="conjugations"><a href="">liste</a>
-                        </th>
-                        <th class="conjugations"><a href="">texte</a><small>*</small>
-                        </th>
+                        <th class="conjugations"></th>
+                        <th class="conjugations"></th>
 
                         <!-- conditionnel passé -->
                         <th class="conjugations"><a href="conjugations.html?Le%20conditionnel%20passé">liste</a></th>
@@ -239,6 +239,7 @@
                             <td class="conjugations" data-key="exercise_future.html"></td>
 
                             <td class="others" data-key="exercise_time_prepositions.html"></td>
+                            <td class="others" data-key="exercise_y_en.html"></td>
                             <td class="others" data-key="exercise_ceci_cela_celui.html"></td>
                             <td class="others" data-key="exercise_lui_leur.html"></td>
                             <td class="others" data-key="exercise_negation.html"></td>
