fine-tuned mon-ton-son

--- a/french/pages/exercise_mon_ton_son.html
+++ b/french/pages/exercise_mon_ton_son.html
@@ -151,10 +151,10 @@
                             <input type="text" pattern="ton">
                             <b title="ton">corps</b>,
                             Je vois
-                            <input type="text" pattern="">
-                            <b title="ta">belle silhouette</b> et
                             <input type="text" pattern="ta">
-                            belles grandes jambes.
+                            <b title="ta">belle silhouette</b> et
+                            <input type="text" pattern="tes">
+                            <b title="tes">belles grandes jambes</b>.
 
                             Tout me plaît chez toi,
                             <input type="text" pattern="ma">
