fine-tuned mien-sien

--- a/french/pages/exercise_mien_sien.html
+++ b/french/pages/exercise_mien_sien.html
@@ -52,7 +52,7 @@
                             </li>
 
                             <li>
-                                <span title="les leurs">Ces gants (m) sont aux enfants ?</span>
+                                <span title="les leurs">Ces gants sont aux enfants ?</span>
                                 <span>- Oui, ce sont <input type="text" pattern="les leurs">.</span>
                             </li>
 
@@ -90,7 +90,7 @@
 
                         <ol>
                             <li>
-                                Ton chat est brun,
+                                Ton <b title="le mien">chat</b> est brun,
                                 <input type="text" pattern="le mien">
                                 est roux.
                             </li>
