fine-tuned ce-ces-cet

--- a/french/pages/exercise_ce_ces_cet.html
+++ b/french/pages/exercise_ce_ces_cet.html
@@ -177,8 +177,8 @@
                             </li>
 
                             <li>
-                                <input type="text" pattern="Ce">
-                                <b title="Ce">mois</b> prochain, nous ferons un voyage en Europe.
+                                <input type="text" pattern="Le">
+                                <b title="Le">mois</b> prochain, nous ferons un voyage en Europe.
                             </li>
                         </ol>
                     </section>
