finished text exercise for y-en

--- a/french/pages/exercise_y_en.html
+++ b/french/pages/exercise_y_en.html
@@ -132,7 +132,7 @@
 
                 <li>
                     <section class="span-half">
-                        <h4>Écrivez ces phrases en remplaçant les compléments en italique par le pronom <i>EN</i> ou le
+                        <h4>Écrivez ces phrases en remplaçant les compléments en gras par le pronom <i>EN</i> ou le
                             pronom <i>Y</i>.</h4>
 
                         <ol>
@@ -194,6 +194,132 @@
                     </section>
                 </li>
 
+                <li>
+                    <section class="span-half">
+                        <h4>Répondez aux questions en remplaçant les compléments en gras par le pronom <i>EN</i> ou
+                            le pronom <i>Y</i>.</h4>
+
+                        <ol>
+                            <li>
+                                <span title="nous allons y manger">Allez-vous manger <b>au restaurant grec</b> ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous allons y manger">.</span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'en avons jamais mangé">Avez-vous déjà mangé <b>des cuisses de
+                                        grenouille</b> ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'en avons jamais mangé">.</span>
+                            </li>
+
+                            <li>
+                                <span title="nous en prenons">Prenez-vous <b>du beurre</b> avec le homard ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous en prenons">.</span>
+                            </li>
+
+                            <li>
+                                <span title="Chantal n'en a pas choisi une">Est-ce que Chantal a choisi <b>une salade
+                                        césar</b>
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="Chantal n'en a pas choisi une">.</span>
+                            </li>
+
+                            <li>
+                                <span title="cette usine y est située">Cette usine est-elle située <b>derrière
+                                        l’école</b>
+                                    ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="cette usine y est située">.</span>
+                            </li>
+
+                            <li>
+                                <span title="je n'en reviens pas">Reviens-tu de <b>chez Jennifer</b> ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="je n'en reviens pas">.</span>
+                            </li>
+
+                            <li>
+                                <span title="Lucie en a pris un">Lucie a-t-elle pris <b>un apéritif</b> ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="Lucie en a pris un">.</span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'en revenons pas">Vous revenez <b>du cours de français</b> ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'en revenons pas">.</span>
+                            </li>
+
+                            <li>
+                                <span title="nous en avons assez">Avons-nous assez <b>de lait</b> pour le souper
+                                    ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous en avons assez">.</span>
+                            </li>
+
+                            <li>
+                                <span title="je ne leur écris pas">Écris-tu <b>à tes vieux amis</b> de temps en temps
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="je ne leur écris pas">.</span>
+                            </li>
+
+                            <li>
+                                <span title="j'y ai réfléchi">Avez-vous réfléchi <b>à ma proposition</b> ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="j'y ai réfléchi">.</span>
+                            </li>
+
+                            <li>
+                                <span title="Andrea n'y va pas">Andrea va-t-elle <b>à Ottawa</b> cette fin de semaine
+                                    ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="Andrea n'y va pas">.</span>
+                            </li>
+
+                            <li>
+                                <span title="J'y reste deux jours">Vous restez <b>à Québec</b> un ou deux jours ?</span>
+                                <span><input type="text" pattern="J'y reste deux jours">.</span>
+                            </li>
+
+                            <li>
+                                <span title="J'en ai un">Combien <b>d’animaux</b> avez-vous ? (1)</span>
+                                <span><input type="text" pattern="J'en ai un">.</span>
+                            </li>
+
+                            <li>
+                                <span title="Angela ne s'y intéresse pas">Angela s’intéresse-t-elle <b>à la musique</b>
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="Angela ne s'y intéresse pas">.</span>
+                            </li>
+
+                            <li>
+                                <span title="Nous y allons à 19h">Vous allez <b>au cinéma</b> à 19h ou 20h ?
+                                    (19h)</span>
+                                <span><input type="text" pattern="Nous y allons à 19h">.</span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'en mangeons pas tous les jours">Mangez-vous <b>de la viande</b> tous
+                                    les
+                                    jours ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="nous n'en mangeons pas tous les jours">.</span>
+                            </li>
+
+                            <li>
+                                <span title="nous en avons apporté une">Avez-vous apporté <b>une bouteille de vin</b>
+                                    ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous en avons apporté une">.</span>
+                            </li>
+
+                            <li>
+                                <span title="je n'y ai pas jeté les vieilles feuilles">As-tu jeté les vieilles feuilles
+                                    <b>dans la poubelle</b> ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je n'y ai pas jeté les vieilles feuilles">.</span>
+                            </li>
+
+                            <li>
+                                <span title="elle en est satisfaite">Est-elle satisfaite <b>de ses résultats</b>
+                                    ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="elle en est satisfaite">.</span>
+                            </li>
+
+                        </ol>
+                    </section>
+                </li>
 
             </ol>
 
