fine-tuned mien-sien

--- a/french/pages/exercise_mien_sien.html
+++ b/french/pages/exercise_mien_sien.html
@@ -126,7 +126,7 @@
                             </li>
 
                             <li>
-                                Notre <b title="la mienne">voisine</b> est très gentille,
+                                Votre <b title="la mienne">voisine</b> est très gentille,
                                 <input type="text" pattern="la mienne">
                                 ne l’est pas.
                             </li>
