fine-tunes CSS to show/hide columns on stats page

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -61,7 +61,7 @@
             <table id="stats-table">
                 <thead>
                     <tr>
-                        <th rowspan="3">date</th>
+                        <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th class="conjugations conjugations-plus others" colspan="10">A1</th>
                         <th class="conjugations conjugations-plus others tense-sequence" colspan="15">A2</th>
