added to stats page columns (without links) for B2 and B2 pronouns

--- a/french/pages/exercise_quand_comment_combien.html
+++ b/french/pages/exercise_quand_comment_combien.html
@@ -215,8 +215,7 @@
 
                 <li>
                     <section class="span-half first-span-grows">
-                        <h4>Posez la question avec : <i>où</i>, <i>quand</i>, <i>comment</i>, <i>quand</i> ou
-                            <i>combien</i>.
+                        <h4>Posez la question avec : <i>où</i>, <i>quand</i>, <i>comment</i> ou <i>combien</i>.
                         </h4>
 
                         <ol>
