--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -64,20 +64,20 @@
                         <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th class="conjugations conjugations-plus others" colspan="10">A1</th>
-                        <th class="conjugations conjugations-plus others tense-sequence" colspan="15">A2</th>
-                        <th class="conjugations tense-sequence" colspan="7">B1</th>
-                        <th class="conjugations conjugations-plus tense-sequence" colspan="9">B2</th>
+                        <th class="conjugations conjugations-plus others tense-sequence" colspan="16">A2</th>
+                        <th class="conjugations tense-sequence others" colspan="9">B1</th>
+                        <th class="conjugations conjugations-plus tense-sequence others" colspan="12">B2</th>
                     </tr>
                     <tr>
                         <!-- A1 -->
                         <th class="conjugations" colspan="2">présent</th>
-                        <th class="conjugations-plus" colspan="1">Devoir Pouvoir Falloir</th>
+                        <th class="conjugations-plus" colspan="1">Devoir Vouloir Pouvoir Falloir</th>
                         <th class="others" colspan="1">Mon Ton Son</th>
                         <th class="others" colspan="1">De Du Des</th>
                         <th class="others" colspan="1">Ce Ces Cet</th>
-                        <th class="others" colspan="1">Quand Comment Combien</th>
+                        <th class="others" colspan="1">Quand Comment Combien Où</th>
                         <th class="conjugations" colspan="2">passé composé</th>
-                        <th class="others" colspan="1">Qui Quel Quelle</th>
+                        <th class="others" colspan="1">Qui Que Quel Quelle</th>
 
                         <!-- A2 -->
                         <th class="conjugations-plus" colspan="1">Avoir ou Être</th>
@@ -90,6 +90,7 @@
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
                         <th class="others" colspan="1">Y En</th>
+                        <th class="others" colspan="1">Qui ou Que</th>
                         <th class="others" colspan="1">Ceci Cela Celui</th>
                         <th class="others" colspan="1">Lui Leur</th>
                         <th class="others" colspan="1" title="négation 1">nég.1</th>
@@ -103,10 +104,15 @@
                             <span class="short-name"
                                 title="imparfait - passé composé - plus-que-parfait">i-pc-pqp</span>
                         </th>
+                        <th class="others" colspan="1">Que ou Dont</th>
+                        <th class="others" colspan="1">Qui Que Dont Où</th>
                         <th class="conjugations" colspan="2">conditionnel présent</th>
                         <th class="conjugations" colspan="2">subjonctif présent</th>
 
                         <!-- B2 -->
+                        <th class="others" colspan="1">Ce&nbsp;qui Ce&nbsp;que Ce&nbsp;dont Ce&nbsp;à&nbsp;quoi</th>
+                        <th class="others" colspan="1">Dont ou Duquel</th>
+                        <th class="others" colspan="1">Lequel Auquel Duquel</th>
                         <th class="conjugations" colspan="2">subjonctif passé</th>
                         <th class="conjugations" colspan="2">conditionnel passé</th>
                         <th class="tense-sequence" colspan="1">
@@ -157,6 +163,7 @@
 
                         <th class="others"><a href="exercise_time_prepositions.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_y_en.html">texte</a><small>*</small></th>
+                        <th class="others">texte</th>
                         <th class="others"><a href="exercise_ceci_cela_celui.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_lui_leur.html">texte</a><small>*</small></th>
                         <th class="others"><a href="exercise_negation.html">texte</a><small>*</small></th>
@@ -173,6 +180,9 @@
 
                         <th class="tense-sequence"><a href="exercise_concordance3.html">texte</a></th>
 
+                        <th class="others">texte</th>
+                        <th class="others">texte</th>
+
                         <!-- conditionnel présent -->
                         <th class="conjugations"><a href="conjugations.html?Le%20conditionnel%20pr%C3%A9sent">liste</a>
                         </th>
@@ -186,9 +196,13 @@
                         </th>
 
                         <!-- B2 -->
+                        <th class="others">texte</th>
+                        <th class="others">texte</th>
+                        <th class="others">texte</th>
+
                         <!-- subjonctif passé -->
-                        <th class="conjugations"></th>
-                        <th class="conjugations"></th>
+                        <th class="conjugations">liste</th>
+                        <th class="conjugations">texte</th>
 
                         <!-- conditionnel passé -->
                         <th class="conjugations"><a href="conjugations.html?Le%20conditionnel%20passé">liste</a></th>
@@ -240,6 +254,7 @@
 
                             <td class="others" data-key="exercise_time_prepositions.html"></td>
                             <td class="others" data-key="exercise_y_en.html"></td>
+                            <td class="others" data-key="exercise_qui_que.html"></td>
                             <td class="others" data-key="exercise_ceci_cela_celui.html"></td>
                             <td class="others" data-key="exercise_lui_leur.html"></td>
                             <td class="others" data-key="exercise_negation.html"></td>
@@ -254,6 +269,9 @@
 
                             <td class="tense-sequence" data-key="exercise_concordance3.html"></td>
 
+                            <td class="others" data-key="exercise_que_dont.html"></td>
+                            <td class="others" data-key="exercise_qui_que_dont_ou.html"></td>
+
                             <td class="conjugations" data-key="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
                             <td class="conjugations" data-key="exercise_conditionalpresent.html"></td>
 
@@ -261,6 +279,10 @@
                             <td class="conjugations" data-key="exercise_presentsubjunctive.html"></td>
 
                             <!-- B2 -->
+                            <td class="others" data-key=""></td>
+                            <td class="others" data-key=""></td>
+                            <td class="others" data-key=""></td>
+
                             <td class="conjugations" data-key=""></td>
                             <td class="conjugations" data-key=""></td>
 
