fine-tuned mon-ton-son

--- a/french/pages/exercise_mon_ton_son.html
+++ b/french/pages/exercise_mon_ton_son.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- exercises are taken from https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F486168017_Les_partitifs_exercices_et_corrig_.pdf -->
+<!-- exercises are taken from https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/O0005627613_les_possessifs_exercices_et_corrig_.pdf -->
 
 <html lang="fr">
 
@@ -135,7 +135,7 @@
                         </p>
 
                         <p class="short-input">
-                            Je suis fou d’amour de toi. J’aime
+                            Je suis fou d’amour de <i>toi</i>. J’aime
                             <input type="text" pattern="ton">
                             <b title="ton">joli visage</b>
                             <input type="text" pattern="ta">
