fine-tuned concordance future

--- a/french/pages/exercise_concordance_future.html
+++ b/french/pages/exercise_concordance_future.html
@@ -227,7 +227,7 @@
                                 partir.
                             </li>
                             <li>
-                                Vous me donnerai votre compte-rendu quand vous
+                                Vous me donnerez votre compte-rendu quand vous
                                 (<b title="l'aurez terminé">le terminer</b>)
                                 <input type="text" class="wide" pattern="l'aurez terminé">
                             </li>
