added checkbox Exercise of last days to stats page (no functionality)

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -57,6 +57,9 @@
                         </label>
                     </div>
 
+                    <label style="float: right"><input type="checkbox" name="last-days" />Exercices des derniers
+                        jours</label>
+
                     <div id="language-levels">
                         <label><input type="checkbox" name="A1" />A1</label>
 
