added text exercise for qui-que

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -181,7 +181,7 @@
 
                         <th class="A2 others"><a href="exercise_time_prepositions.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_y_en.html">texte</a><small>*</small></th>
-                        <th class="A2 others">texte</th>
+                        <th class="A2 others"><a href="exercise_qui_que.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_ceci_cela_celui.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_lui_leur.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_negation.html">texte</a><small>*</small></th>
