--- a/french/index.html
+++ b/french/index.html
@@ -239,6 +239,13 @@
 
   <div class="card">
     <span class="cefr">A2</span>
+    <header>Qui, que</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_qui_que.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
     <header>Ceci, cela, celui</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_ceci_cela_celui.html">exercice de texte</a>
