--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -41,9 +41,6 @@
                 <div id="checkboxes">
                     <div id="exercise-types">
                         <label>
-                            <input type="checkbox" name="duration" />Colonne de durée
-                        </label>
-                        <label>
                             <input type="checkbox" name="conjugations" />Conjugaisons de base
                         </label>
                         <label>
@@ -56,6 +53,10 @@
                             <input type="checkbox" name="tense-sequence" />Concordance des temps
                         </label>
                     </div>
+
+                    <label style="float: left">
+                        <input type="checkbox" name="duration" />Colonne de durée
+                    </label>
 
                     <label style="float: right"><input type="checkbox" name="last-days" />Exercices des derniers
                         jours</label>
