--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -54,11 +54,12 @@
                         </label>
                     </div>
 
-                    <label style="float: left">
+                    <label class="not-disableable" style="float: left">
                         <input type="checkbox" name="duration" />Colonne de durée
                     </label>
 
-                    <label style="float: right"><input type="checkbox" name="last-days" />Exercices des derniers
+                    <label class="not-disableable" style="float: right"><input type="checkbox"
+                            name="recent-dates" />Exercices des derniers
                         jours</label>
 
                     <div id="language-levels">
@@ -81,32 +82,39 @@
                     <tr>
                         <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
-                        <th class="A2 conjugations conjugations-plus others tense-sequence" colspan="16">A2</th>
-                        <th class="B1 conjugations tense-sequence others" colspan="9">B1</th>
-                        <th class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">B2</th>
+                        <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
+                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="16">
+                            A2</th>
+                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="9">B1</th>
+                        <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
+                            B2</th>
                     </tr>
                     <tr>
                         <!-- A1 -->
                         <th class="A1 conjugations" colspan="2">présent</th>
-                        <th class="A1 conjugations-plus" colspan="1">Devoir Vouloir Pouvoir Falloir</th>
-                        <th class="A1 others" colspan="1">Mon Ton Son</th>
-                        <th class="A1 others" colspan="1">De Du Des</th>
-                        <th class="A1 others" colspan="1">Ce Ces Cet</th>
-                        <th class="A1 others" colspan="1">Quand Comment Combien Où</th>
+                        <th data-key="exercise_devoir_pouvoir_falloir_vouloir.html" class="A1 conjugations-plus"
+                            colspan="1">Devoir Vouloir Pouvoir Falloir</th>
+                        <th data-key="exercise_mon_ton_son.html" class="A1 others" colspan="1">Mon Ton Son</th>
+                        <th data-key="exercise_de_du_des.html" class="A1 others" colspan="1">De Du Des</th>
+                        <th data-key="exercise_ce_ces_cet.html" class="A1 others" colspan="1">Ce Ces Cet</th>
+                        <th data-key="exercise_quand_comment_combien.html" class="A1 others" colspan="1">Quand Comment
+                            Combien Où</th>
                         <th class="A1 conjugations" colspan="2">passé composé</th>
-                        <th class="A1 others" colspan="1">Qui Que Quel Quelle</th>
+                        <th data-key="exercise_qui_quel_quelle.html" class="A1 others" colspan="1">Qui Que Quel Quelle
+                        </th>
 
                         <!-- A2 -->
-                        <th class="A2 conjugations-plus" colspan="1">Avoir ou Être</th>
-                        <th class="A2 others" colspan="1">Mien Sien</th>
+                        <th data-key="exercise_avoir_etre.html" class="A2 conjugations-plus" colspan="1">Avoir ou Être
+                        </th>
+                        <th data-key="exercise_mien_sien.html" class="A2 others" colspan="1">Mien Sien</th>
                         <th class="A2 conjugations" colspan="2">imparfait</th>
                         <th class="A2 tense-sequence" colspan="1">
                             <span class="full-name">imparfait - passé&nbsp;composé</span>
                             <span class="short-name" title="imparfait - passé composé">i.-p.c.</span>
                         </th>
                         <th class="A2 conjugations" colspan="2">futur simple</th>
-                        <th class="A2 others" colspan="1" title="prépositions de temps">prép. de temps</th>
+                        <th data-key="exercise_time_prepositions.html" class="A2 others" colspan="1"
+                            title="prépositions de temps">prép. de temps</th>
                         <th class="A2 others" colspan="1">Y En</th>
                         <th class="A2 others" colspan="1">Qui ou Que</th>
                         <th class="A2 others" colspan="1">Ceci Cela Celui</th>
@@ -139,7 +147,7 @@
                         </th>
                         <th class="B2 conjugations-plus" colspan="1">passif</th>
                         <th class="B2 conjugations" colspan="2">futur antérieur</th>
-                        <th class="B2 tense-sequence">
+                        <th data-key="exercise_concordance_future.html" class="B2 tense-sequence">
                             <span class="full-name">futur simple - futur antérieur</span>
                             <span class="short-name" title="futur simple - futur antérieur">f.s.-f.a.</span>
                         </th>
