added counter for recent dates on stats page

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -141,7 +141,7 @@
                         <th class="B2 others" colspan="1">Lequel Auquel Duquel</th>
                         <th class="B2 conjugations" colspan="2">subjonctif passé</th>
                         <th class="B2 conjugations" colspan="2">conditionnel passé</th>
-                        <th class="B2 tense-sequence" colspan="1">
+                        <th data-key="exercise_concordance_conditional.html" class="B2 tense-sequence" colspan="1">
                             <span class="full-name">Les phrases de condition</span>
                             <span class="short-name" title="Les phrases de condition">si...</span>
                         </th>
@@ -241,7 +241,8 @@
                         <th class="B2 conjugations-plus"><a href="exercise_passive.html">texte</a><small>*</small></th>
 
                         <!-- futur antérieur -->
-                        <th class="B2 conjugations"><a href="conjugations.html?Le%20futur%20antérieur">liste</a></th>
+                        <th class="B2 conjugations"><a href="conjugations.html?Le%20futur%20ant%C3%A9rieur">liste</a>
+                        </th>
                         <th class="B2 conjugations"><a href="exercise_futureperfect.html">texte</a></th>
 
                         <th class="B2 tense-sequence"><a href="exercise_concordance_future.html">texte</a></th>
